--- a/content/posts/2012-12-04-mandala.md
+++ b/content/posts/2012-12-04-mandala.md
@@ -9,7 +9,7 @@ permalink: /mandala/
 categories:
   - Imagery
 ---
-[<img src="http://br4d.net/wp-content/uploads/2015/01/project-150x150.jpg" alt="mandala" width="150" height="150" class="alignleft size-thumbnail wp-image-443" srcset="http://br4d.net/wp-content/uploads/2015/01/project-150x150.jpg 150w, http://br4d.net/wp-content/uploads/2015/01/project-300x300.jpg 300w, http://br4d.net/wp-content/uploads/2015/01/project-1024x1024.jpg 1024w, http://br4d.net/wp-content/uploads/2015/01/project.jpg 1240w" sizes="(max-width: 150px) 100vw, 150px" />](http://br4d.net/wp-content/uploads/2015/01/project.jpg)
+[<img src="/images/2015/01/project-150x150.jpg" alt="mandala" width="150" height="150" class="alignleft size-thumbnail wp-image-443" srcset="/images/2015/01/project-150x150.jpg 150w, /images/2015/01/project-300x300.jpg 300w, /images/2015/01/project-1024x1024.jpg 1024w, /images/2015/01/project.jpg 1240w" sizes="(max-width: 150px) 100vw, 150px" />](/images/2015/01/project.jpg)
 
 This is a Mandala I created in Adobe Photoshop from scratch for the RST department at Marshall University.
 
