--- a/content/posts/2012-12-04-mandala.md
+++ b/content/posts/2012-12-04-mandala.md
@@ -7,7 +7,9 @@ layout: post
 guid: http://br4d.net/?p=440
 permalink: /mandala/
 categories:
-  - Imagery
+  - Art
+tags:
+  - Photoshop
 ---
 [<img src="/images/2015/01/project-150x150.jpg" alt="mandala" width="150" height="150" class="float-right size-thumbnail wp-image-443" srcset="/images/2015/01/project-150x150.jpg 150w, /images/2015/01/project-300x300.jpg 300w, /images/2015/01/project-1024x1024.jpg 1024w, /images/2015/01/project.jpg 1240w" sizes="(max-width: 150px) 100vw, 150px" />](/images/2015/01/project.jpg)
 
